<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_number">Enter Number</string>
    <string name="result">result</string>
    <string name="ac">AC</string>
    <string name="delete">Del</string>
    <string name="calculator">Calculator</string>
    <string name="inputs">inputs</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Add">+</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Subtract">-</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Multiply">*</string>
    <string name="Zero">0</string>
    <string name="Dot">.</string>
    <string name="Equals">=</string>
    <string name="Divide">/</string>
    <string name="closeBracket">)</string>
    <string name="openBracket">(</string>
    <string name="c">C</string>
    <string name="moduloOperator">%</string>
</resources>