<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/workingTxtView"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:gravity="end|bottom"
            android:inputType="number"
            android:text=""
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/resultTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/teal_700" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/btnClearAll"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:text="@string/ac"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnOpenBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/c"
                android:textSize="20dp" />

            <!--<Button
                android:id="@+id/btnDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/delete"
                android:textSize="20dp" />-->

            <Button
                android:id="@+id/btnModulo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/moduloOperator"
                android:textSize="20dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">


            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Seven"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Eight"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Nine"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnAddition"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Add"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">


            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Four"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Five"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Six"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnSubtraction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Subtract"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">


            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/One"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Two"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Three"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnMultiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Multiply"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">


            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Zero"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnPoint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Dot"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"


                android:text="@string/Equals"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/Divide"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>